# aws-bedrock-pdf-chatbot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
