[project]
name = "chatbot3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-aws>=0.2.33",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "pypdf>=6.1.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
]
